# game-of-life

./: .gitmodules  Cargo.toml  LICENSE_MIT  README.md  blom.rle_10000_results.csv  blom.rle_1000_results.csv  blom.rle_100_results.csv  blom.rle_performance_results.csv  justyna.rle_performance_results.csv  performance_results.txt
docs/: gen_fig_gif.py  gen_figs.py
frontend/: .gitignore  build.py  index.html  index.js  worker.js
frontend/examples/: 52513m.rle
hashlife-algo/: Cargo.toml
hashlife-algo/src/: largekey_table.rs  lib.rs  point.rs  quadtree.rs  raw_ops.rs  rle.rs  serialize.rs  typedarena.rs
hashlife-cli/: Cargo.toml
hashlife-cli/src/: main.rs
py/: pythonplot.ipynb
results_csv/: blom.rle_1000_3_results.csv  blom.rle_100_2_results.csv  blom.rle_100_5_results.csv  blom.rle_100_Some(2)_results.csv  blom.rle_100_results.csv  blom.rle_500_results.csv  test_512_100.csv
src/: bitwise.rs  hashed_parallel.rs  hashlife.rs  lib-sparse-matrix.rs  lib.rs  main.rs  naive.rs  optimized_alg.rs  parallel.rs  parallel_alex.rs  parallelize.rs  sparse_matrix.rs  track_alive_cells.rs  traits.rs  utils.rs
wasm-hashlife/: Cargo.toml  LICENSE_MIT
wasm-hashlife/src/: lib.rs
www/: bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
